welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: ';' expected but integer literal found.
	if (noDoubles && die1 == die2) {if (die1) == 6 {2}  else {2*die1}}
                                                     ^