welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if (noDoubles && die1 == die2) {if (die1) == 6 {2}  else {2*die1}}
	else{die1+die2}
}
